# quick-booking

./: Cargo.toml
customer-service/: Cargo.toml
reservation-management/: Cargo.toml
reservation-management/src/: main.rs  services.rs
reservation-management/src/handlers/: mod.rs
reservation-management/src/handlers/restaurant/: create.rs  get.rs  mod.rs
reservation-management/src/models/: mod.rs  reservation.rs  restaurant.rs  table.rs
reservation-management/src/restaurant/: api.rs  mod.rs  protocol.rs  repo.rs
reservation-management/src/restaurant/tables/: api.rs  mod.rs  repo.rs
reservation-management/src/services/: dynamo_db.rs
