[package]
name = "reservation-management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
actix-web = "4"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
tokio = { version = "1.25.0", features = ["full"] }
thiserror = "1.0.38"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91", features = ["raw_value"] }
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
derive_more = "0.99.17"
anyhow = "1.0.69"
env_logger = "0.8"
dotenv = "0.15.0"
